<resources>
    <string name="app_name">Wireless PC Remote</string>
    <string name="btn_connectViaBluetooth">Connect via Bluetooth</string>
    <string name="btn_connectViaWiFiDirect">Connect via WiFi Direct</string>
    <string name="not_connected">Not connected</string>
    <string name="btn_connectViaWlan">Connect via WLAN</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">QR code detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="btn_scanQRCode">Scan computer values</string>
    <string name="profile_deleted">Profile deleted!</string>
    <string name="confirm_delete_profile">Delete profile?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="save">Save</string>
    <string name="up_arrow">↑</string>
    <string name="down_arrow">↓</string>
    <string name="left_arrow">←</string>
    <string name="right_arrow">→</string>
    <string name="space">Space</string>
    <string name="f5">F5</string>
    <string name="ctrl_f5">ctrl + F5</string>
    <string name="ctrl_l">CTRL + L</string>
    <string name="dim_screen">Dim Screen</string>
    <string name="edit">edit</string>
    <string name="wlan">Wlan</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="none">None</string>
    <string name="wireless">Wireless</string>
    <string name="computers_network_name">Computer\'s network name</string>
    <string name="tcp_port">TCP Port (default: 8001)</string>
    <string name="computers_bluetooth_name">Computer\'s Bluetooth name</string>
    <string name="connection_2nd_priority">Connection 2nd priority:</string>
    <string name="connection_1st_priority">Connection 1st priority:</string>
    <string name="connect">connect</string>
    <string name="saved">Profile saved</string>
    <string name="could_not_connect">Could not connect</string>
    <string name="media_layout">Media layout</string>
    <string name="presentation_layout">Presentation layout</string>
    <string name="pause">play/pause</string>
    <string name="next_track">next track</string>
    <string name="previous_track">previous track</string>
    <string name="mute">mute</string>
    <string name="volume_up">volume +</string>
    <string name="volume_down">volume -</string>
</resources>
