<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_alignTop="@id/connection_toolbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".connection.ConnectionActivity">

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/up_arrow"
        android:id="@+id/up"
        android:layout_above="@+id/down"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/down_arrow"
        android:id="@id/down"
        android:layout_above="@+id/spacebar"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/left_arrow"
        android:id="@+id/left"
        android:layout_alignBottom="@id/down"
        android:layout_toLeftOf="@id/down"
        android:layout_toStartOf="@id/down"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/right_arrow"
        android:id="@+id/right"
        android:layout_alignBottom="@id/down"
        android:layout_toRightOf="@id/down"
        android:layout_toEndOf="@id/down"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/space"
        android:id="@id/spacebar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_alignLeft="@id/left"
        android:layout_alignStart="@id/left"
        android:layout_alignRight="@id/right"
        android:layout_alignEnd="@id/right"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/pause"
        android:id="@+id/media_pause"
        android:layout_marginTop="50dp"
        android:onClick="onButtonDown"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@id/left"
        android:layout_alignStart="@id/left" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/next_track"
        android:id="@+id/media_next"
        android:onClick="onButtonDown"
        android:layout_below="@id/media_pause"
        android:layout_alignLeft="@id/left"
        android:layout_alignStart="@id/left"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/previous_track"
        android:id="@+id/media_previous"
        android:onClick="onButtonDown"
        android:layout_below="@id/media_next"
        android:layout_alignLeft="@id/left"
        android:layout_alignStart="@id/left"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/mute"
        android:id="@+id/volume_mute"
        android:onClick="onButtonDown"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@id/right"
        android:layout_alignStart="@id/right"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/volume_up"
        android:id="@+id/volume_up"
        android:onClick="onButtonDown"
        android:layout_below="@id/volume_mute"
        android:layout_alignLeft="@id/right"
        android:layout_alignStart="@id/right"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/volume_down"
        android:id="@+id/volume_down"
        android:onClick="onButtonDown"
        android:layout_below="@id/volume_up"
        android:layout_alignLeft="@id/right"
        android:layout_alignStart="@id/right"
        android:layout_marginTop="10dp" />

</RelativeLayout>
