<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gustavs.remotepccontroller.ConnectionActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/up_arrow"
        android:id="@+id/up"
        android:layout_marginTop="91dp"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/down_arrow"
        android:id="@+id/down"
        android:layout_below="@+id/up"
        android:layout_centerHorizontal="true"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_arrow"
        android:id="@+id/left"
        android:layout_alignBottom="@+id/down"
        android:layout_toLeftOf="@+id/down"
        android:layout_toStartOf="@+id/down"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_arrow"
        android:id="@+id/right"
        android:layout_alignBottom="@+id/down"
        android:layout_toRightOf="@+id/down"
        android:layout_toEndOf="@+id/down"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:id="@+id/space"
        android:layout_below="@+id/down"
        android:layout_alignLeft="@+id/left"
        android:layout_alignStart="@+id/left"
        android:layout_alignRight="@+id/right"
        android:layout_alignEnd="@+id/right"
        android:onClick="onButtonDown" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f5"
        android:id="@+id/f5"
        android:onClick="onButtonDown"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/ctrl_f5"
        android:layout_toStartOf="@+id/ctrl_f5" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ctrl_f5"
        android:id="@+id/ctrl_f5"
        android:onClick="onButtonDown"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/up"
        android:layout_alignStart="@+id/up" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ctrl_l"
        android:id="@+id/ctrl_l"
        android:onClick="onButtonDown"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ctrl_f5"
        android:layout_toEndOf="@+id/ctrl_f5" />

    <Button
        android:text="@string/dim_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:id="@+id/btn_dim_screen"
        android:onClick="onDimScreenClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
