<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:text="@string/btn_connectViaBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_connectBluetooth"
        android:onClick="connectViaBluetooth" />

    <Button
        android:text="@string/btn_connectViaWiFiDirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_connectWiFiDirect"
        android:onClick="connectViaWiFiDirect"
        android:layout_below="@+id/btn_connectBluetooth"
        android:layout_alignLeft="@+id/btn_connectBluetooth"
        android:layout_alignStart="@+id/btn_connectBluetooth"
        android:layout_alignRight="@+id/btn_connectBluetooth"
        android:layout_alignEnd="@+id/btn_connectBluetooth" />

    <Button
        android:text="@string/btn_connectViaWlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_connectViaWLAN"
        android:onClick="connectViaWlan"
        android:layout_below="@+id/btn_connectWiFiDirect"
        android:layout_alignLeft="@+id/btn_connectWiFiDirect"
        android:layout_alignStart="@+id/btn_connectWiFiDirect"
        android:layout_alignRight="@+id/btn_connectBluetooth"
        android:layout_alignEnd="@+id/btn_connectBluetooth" />

    <Button
        android:text="@string/btn_scanQRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_scanQRCode"
        android:onClick="scanQRCode"
        android:layout_above="@+id/btn_connectBluetooth"
        android:layout_alignLeft="@+id/btn_connectBluetooth"
        android:layout_alignStart="@+id/btn_connectBluetooth"
        android:layout_alignRight="@+id/btn_connectBluetooth"
        android:layout_alignEnd="@+id/btn_connectBluetooth" />

</RelativeLayout>